zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__vim_scroll_region_down.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C):  22 line2                                                                                                           
01 (C):  21 line3                                                                                                           
02 (C):  20 line4                                                                                                           
03 (C):  19 line5                                                                                                           
04 (C):  18 line6                                                                                                           
05 (C):  17 line7                                                                                                           
06 (C):  16 line8                                                                                                           
07 (C):  15 line9                                                                                                           
08 (C):  14 line10                                                                                                          
09 (C):  13 line11                                                                                                          
10 (C):  12 line12                                                                                                          
11 (C):  11 line13                                                                                                          
12 (C):  10 line14                                                                                                          
13 (C):   9 line15                                                                                                          
14 (C):   8 line16                                                                                                          
15 (C):   7 line17                                                                                                          
16 (C):   6 line18                                                                                                          
17 (C):   5 line19                                                                                                          
18 (C):   4 line20                                                                                                          
19 (C):   3 line21                                                                                                          
20 (C):   2 line22                                                                                                          
21 (C):   1 line23                                                                                                          
22 (C): 24  line24                                                                                                          
23 (C):   1 line25                                                                                                          
24 (C):   2 line26                                                                                                          
25 (C):   3 line27                                                                                                          
26 (C):  NORMAL  testfile.rs                                                              unix | utf-8 | rust   57%   24:1  
27 (C):                                                                                                                     

