zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__vttest1_1.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): **************************************************************************************************************
01 (C): *++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*
02 (C): *+                                                                                                          +*
03 (C): *+                                                                                                          +*
04 (C): *+                                                                                                          +*
05 (C): *+                                                                                                          +*
06 (C): *+                                                                                                          +*
07 (C): *+                                                                                                          +*
08 (C): *+                                  EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE            +*
09 (C): *+                                  E                                                          E            +*
10 (C): *+                                  E The screen should be cleared,  and have an unbroken bor- E            +*
11 (C): *+                                  E der of *'s and +'s around the edge,   and exactly in the E            +*
12 (C): *+                                  E middle  there should be a frame of E's around this  text E            +*
13 (C): *+                                  E with  one (1) free position around it.    Push <RETURN>  E            +*
14 (C): *+                                  E                                                          E            +*
15 (C): *+                                  EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE            +*
16 (C): *+                                                                                                          +*
17 (C): *+                                                                                                          +*
18 (C): *+                                                                                                          +*
19 (C): *+                                                                                                          +*
20 (C): *+                                                                                                          +*
21 (C): *+                                                                                                          +*
22 (C): ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ *
23 (C): **************************************************************************************************************
24 (C):                                                                                                               
25 (C):                                                                                                               
26 (C):                                                                                                               
27 (C):                                                                                                               
28 (C):                                                                                                               
29 (C):                                                                                                               
30 (C):                                                                                                               
31 (C):                                                                                                               
32 (C):                                                                                                               
33 (C):                                                                                                               
34 (C):                                                                                                               
35 (C):                                                                                                               
36 (C):                                                                                                               
37 (C):                                                                                                               
38 (C):                                                                                                               
39 (C):                                                                                                               
40 (C):                                                                                                               

