zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__vttest1_3.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
assertion_line: 148
expression: "format!(\"{:?}\", grid)"
---
00 (C): Test of autowrap, mixing control and print characters.                                                        
01 (C): The left/right margins should have letters in order:                                                          
02 (C): I                                                                                                            i
03 (W): J                                                                                                            j
04 (C): K                                                                                                            k
05 (C): L                                                                                                            l
06 (C): M                                                                                                            m
07 (W): N                                                                                                            n
08 (C): O                                                                                                            o
09 (C): P                                                                                                            p
10 (C): Q                                                                                                            q
11 (W): R                                                                                                            r
12 (C): S                                                                                                            s
13 (C): T                                                                                                            t
14 (C): U                                                                                                            u
15 (W): V                                                                                                            v
16 (C): W                                                                                                            w
17 (C): X                                                                                                            x
18 (C): Y                                                                                                            y
19 (W): Z                                                                                                            z
20 (C):                                                                                                               
21 (C): Push <RETURN>                                                                                                 
22 (C):                                                                                                               
23 (C):                                                                                                               
24 (C):                                                                                                               
25 (C):                                                                                                               
26 (C):                                                                                                               
27 (C):                                                                                                               
28 (C):                                                                                                               
29 (C):                                                                                                               
30 (C):                                                                                                               
31 (C):                                                                                                               
32 (C):                                                                                                               
33 (C):                                                                                                               
34 (C):                                                                                                               
35 (C):                                                                                                               
36 (C):                                                                                                               
37 (C):                                                                                                               
38 (C):                                                                                                               
39 (C):                                                                                                               
40 (C):                                                                                                               

